--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "heroes-spa",
-  "homepage": "https://couswall.github.io/hero-spa/",
+  "homepage": "https://couswall.github.io/heroes-spa/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
